pages/empreendimentos-interna/styles.scss
// Assets
@import "../../assets/scss/main.scss";

// Components
@import "../../components/button-default/";
@import "../../components/header/";
@import "../../components/footer/";
@import "../../components/real-estate-gallery/";
@import "../../components/entry-real-estate-list/";
@import "../../components/real-estate-meta-actions/";
@import "../../components/page-title/";
@import "../../components/real-estate-props/";
@import "../../components/whatsapp-balloon/";
@import "../../components/real-estate-action-carousel/";
@import "../../components/real-estate-form/";
@import "../../components/real-estate-description/";
@import "../../components/real-estate-features/";
@import "../../components/real-estate-book/";
@import "../../components/real-estate-plants/";
@import "../../components/real-estate-testimonies/";
@import "../../components/real-estate-map/";
@import "../../components/real-estate-related/";
@import "../../components/real-estate-modal/";

body {
    background: #f6f6f6;
}
#page-empreendimentos-interna {
    margin-top: 97px;

    ._page-title {
        margin-top: 10px;
        margin-bottom: 20px;
    }
    .page-inner {
        margin-top: 20px;
    }
    ._real-estate-gallery {
        margin-bottom: 46px;
    }
    ._real-estate-meta-actions {
        margin-bottom: 30px;
    }
    .meta {
        display: flex;
        gap: 40px;
        margin-bottom: 50px;

        .left {
            flex: 1;
            min-width: 0;
        }

        .right {
            flex-basis: 435px;
            position: relative;
            z-index: 50;

            ._real-estate-form {
                position: absolute;
            }
        }
    }
    .description {
        & + .features {
            margin-top: -45px;
            position: relative;
        }
    }
    .features {
        & + .book {
            width: 758px;
            margin-left: 23px;
            position: relative;
            top: -62px;
        }
    }
    .map {
        margin-bottom: 80px;
    }
    .related {
        margin-bottom: 60px;
    }
}

